--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gulp": "^3.9.1",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
-    "material-ui": "^0.19.4",
+    "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
@@ -24,6 +24,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^1.3.0",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^15.6.2",
@@ -50,10 +51,14 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.9",
     "file-loader": "^1.1.6",
     "open": "0.0.5",
@@ -64,11 +69,23 @@
   "babel": {
     "presets": [
       "es2015",
-      "react"
+      "react",
+      "stage-3"
+    ],
+    "plugins": [
+      "transform-class-properties",
+      "transform-object-rest-spread"
     ],
     "env": {
       "presets": [
-        "react-hmre"
+        "es2015",
+        "react",
+        "react-hmre",
+        "stage-3"
+      ],
+      "plugins": [
+        "transform-class-properties",
+        "transform-object-rest-spread"
       ]
     }
   }
