--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "css-loader": "^0.28.9",
     "file-loader": "^1.1.6",
     "open": "0.0.5",
+    "react-inline-grid": "^0.5.3",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^1.12.2"
